--- a/.github/actions/format-code/action.yml
+++ b/.github/actions/format-code/action.yml
@@ -6,6 +6,6 @@ runs:
   steps:
     - name: Format and lint code
       run: |
-        npm run lint:fix
+        npm run lint
         npm run format
       shell: bash
