--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@fontsource/lato": "^5.0.21",
+    "@types/react-transition-group": "^4.4.11",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-transition-group": "^4.4.5",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
